src/test/contracts/negative/annotated_storage_and_parameter.mligo
type storage = (int, int) map

type 'a parameter = 'a list

[@entry]
let main (_p : parameter) (s : storage) : operation list * storage = ([], s)
